--- a/templates/dashboard/order/detail.html
+++ b/templates/dashboard/order/detail.html
@@ -7,6 +7,7 @@
 {% load staticfiles %}
 {% load status %}
 {% load voucher %}
+{% load obfuscate_string from utils %}
 
 {% block title %}
   {{ order }} - {% trans "Orders" context "Dashboard orders list" %} - {{ block.super }}
