add obfuscate_email and obfuscate_phone filters, move them to new module

--- a/templates/dashboard/customer/detail.html
+++ b/templates/dashboard/customer/detail.html
@@ -7,7 +7,7 @@
 {% load obfuscate_string from utils %}
 
 {% block title %}
-  {{ customer|obfuscate_string }} - {% trans "Customers" context "Dashboard customers list" %} - {{ block.super }}
+  {{ customer|obfuscate_email }} - {% trans "Customers" context "Dashboard customers list" %} - {{ block.super }}
 {% endblock %}
 
 {% block body_class %}body-customers{% endblock %}
@@ -31,7 +31,7 @@
         <svg data-src="{% static "dashboard/images/arrow-left.svg" %}" fill="#fff" width="20px" height="20px" />
       </a>
     </li>
-    <li><span class="breadcrumbs--elipsed-item">{{ customer|obfuscate_string }}</span></li>
+    <li><span class="breadcrumbs--elipsed-item">{{ customer|obfuscate_email }}</span></li>
   </ul>
 {% endblock %}
 
@@ -183,7 +183,7 @@
               {% endif %}
               <svg data-src="{% static "dashboard/images/email.svg" %}" width="14" height="14" />
               <a href="#">
-                {{ customer.email|obfuscate_string }}
+                {{ customer.email|obfuscate_email }}
               </a>
             </div>
           </div>
