rename demo obfuscator modules to fit project conventions

--- a/templates/dashboard/customer/list.html
+++ b/templates/dashboard/customer/list.html
@@ -3,7 +3,7 @@
 {% load materializecss %}
 {% load staticfiles %}
 {% load utils %}
-{% load demoobfuscators %}
+{% load demo_obfuscators %}
 
 {% block title %}
   {% trans "Customers" context "Dashboard customers list" %} - {{ block.super }}
