--- a/templates/dashboard/order/list.html
+++ b/templates/dashboard/order/list.html
@@ -1,4 +1,5 @@
 {% extends "dashboard/base.html" %}
+{% load demo_obfuscators %}
 {% load i18n %}
 {% load price from taxed_prices %}
 {% load prices_i18n %}
@@ -65,9 +66,12 @@
                     <td>
                       {% render_order_status order.status order.get_status_display %}
                     </td>
-                    {% trans "Guest" context "Anonymous user account value" as guest %}
                     <td>
-                      {{ order.user|default:guest }}
+                      {% if order.user %}
+                        {{ order.user|obfuscate_email }}
+                      {% else %}
+                        {% trans "Guest" context "Anonymous user account value" %}
+                      {% endif %}
                     </td>
                     <td>
                       {{ order.created }}
