--- a/templates/dashboard/order/list.html
+++ b/templates/dashboard/order/list.html
@@ -1,5 +1,4 @@
 {% extends "dashboard/base.html" %}
-{% load demo_obfuscators %}
 {% load i18n %}
 {% load price from taxed_prices %}
 {% load prices_i18n %}
@@ -68,7 +67,7 @@
                     </td>
                     <td>
                       {% if order.user %}
-                        {{ order.user|obfuscate_email }}
+                        {{ order.user }}
                       {% else %}
                         {% trans "Guest" context "Anonymous user account value" %}
                       {% endif %}
