--- a/saleor/static/dashboard/scss/components/_global.scss
+++ b/saleor/static/dashboard/scss/components/_global.scss
@@ -1,6 +1,11 @@
 html {
   background: $body-bg;
-  font-size: 16px;
+  @media only screen and (min-width: 0) {
+    font-size: 14px;
+  }
+  @media only screen and (min-width: $large-screen) {
+    font-size: 13px;
+  }
 }
 
 strong {
