--- a/themes/saleor/layout/_partial/header.ejs
+++ b/themes/saleor/layout/_partial/header.ejs
@@ -11,15 +11,15 @@
         <span class="icon-bar"></span>
       </button>
       <div class="logo">
-        <a href="/"><img src="images/saleor-logo.svg" /></a>
+        <a href="/"><img src="/images/saleor-logo.svg" /></a>
       </div>
     </div>
     <div id="navbar" class="menu navbar-collapse collapse navbar-right">
       <ul>
         <li class="gh-widget">
           <a href="http://github.com/mirumee/saleor" target="_blank" rel="nofollow">
-            <img src="images/github-icon.svg" />
-            <img src="images/github-star.svg" />
+            <img src="/images/github-icon.svg" />
+            <img src="/images/github-star.svg" />
             <span id="gh-stars"></span>
           </a>
         </li>
