--- a/themes/saleor/layout/page.ejs
+++ b/themes/saleor/layout/page.ejs
@@ -7,10 +7,10 @@
     <title>Saleor — an open source storefront written in Python and Django</title>
     <meta name="application-name" content="Saleor — an open source storefront written in Python and Django">
     <%- css('app') %>
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="images/favicons/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/images/favicons/manifest.json">
     <meta name="theme-color" content="#ffffff">
     <meta name="google-site-verification" content="o3fAcqwEAmUxNIxf07503fA79ulBGaXsCpxyCf1zb9w">
     <meta property="og:title" content="Saleor — an open source storefront platform for perfectionists" />
@@ -24,24 +24,7 @@
       <%- partial('_partial/header') %>
     </header>
     <div class="page">
-      <div class="section section-top">
-        <%- partial('_partial/top') %>
-      </div>
-      <div id="developers" class="section section-developers">
-        <%- partial('_partial/developers') %>
-      </div>
-      <div id="store-managers" class="section section-store_managers">
-        <%- partial('_partial/store-managers') %>
-      </div>
-      <div id="customers" class="section section-customers">
-        <%- partial('_partial/customers') %>
-      </div>
-      <div class="section section-slider">
-        <%- partial('_partial/slider') %>
-      </div>
-      <div id="services" class="section section-services">
-        <%- partial('_partial/services') %>
-      </div>
+      <%- partial(`_partial/${page.title}`) %>
       <div class="section section-github">
         <%- partial('_partial/github') %>
       </div>
