--- a/themes/saleor/layout/_partial/footer.ejs
+++ b/themes/saleor/layout/_partial/footer.ejs
@@ -5,11 +5,11 @@
         <div class="col-xs-12 col-md-5 logo">
           <div class="row">
             <div class="col-xs-6 col-center">
-              <div class="saleor"><a href="/"><img src="images/saleor-logo-white.svg" /></a></div>
+              <div class="saleor"><a href="/"><img src="/images/saleor-logo-white.svg" /></a></div>
               <div class="mirumee">
                 <div class="row no-gutter">
                   <div class="col-xs-5"><span>Crafted by</span></div>
-                  <div class="col-xs-7"><a href="https://mirumee.com/"><img src="images/mirumee-logo.svg" /></a></div>
+                  <div class="col-xs-7"><a href="https://mirumee.com/"><img src="/images/mirumee-logo.svg" /></a></div>
                 </div>
               </div>
             </div>
@@ -38,8 +38,8 @@
         <div class="col-xs-12 col-md-2 follow-us">
           <h3>Follow us</h3>
           <ul class="icons">
-            <li><a href="https://github.com/mirumee/saleor" target="_blank"><img src="images/github-icon.svg" /></a></li>
-            <li><a href="https://twitter.com/getsaleor" target="_blank"><img src="images/twitter-icon.svg"/></a></li>
+            <li><a href="https://github.com/mirumee/saleor" target="_blank"><img src="/images/github-icon.svg" /></a></li>
+            <li><a href="https://twitter.com/getsaleor" target="_blank"><img src="/images/twitter-icon.svg"/></a></li>
           </ul>
         </div>
       </div>
