Added a box to accept cookies and learn more

--- a/saleor/static/scss/storefront.scss
+++ b/saleor/static/scss/storefront.scss
@@ -5,6 +5,7 @@
 @import "components/buttons";
 @import "components/cards";
 @import "components/cart-dropdown";
+@import "components/cookie-prompter";
 @import "components/filters";
 @import "components/footer";
 @import "components/forms";
