--- a/templates/checkout/summary_without_shipping.html
+++ b/templates/checkout/summary_without_shipping.html
@@ -12,8 +12,13 @@
       {% bootstrap_form user_form %}
       {% include "account/snippets/address_form.html" with address_form=address_form only %}
     {% endif %}
-    <h2>{% trans "Add a note to your order" context "Checkout summary without shipping note title" %}</h2>
-    {% bootstrap_form note_form show_label=False %}
+
+    {% include "checkout/snippets/add_note_form.html" %}
+
+    <hr/>
+
+    {% include "checkout/snippets/selling_contract_form.html" %}
+
     <p class="text-md-right">
       <button type="submit" class="btn primary">
         {% trans "Place order" context "Checkout summary without shipping action" %}
