Reverted the editor whitespace

--- a/templates/product/product_list_base.html
+++ b/templates/product/product_list_base.html
@@ -49,8 +49,9 @@
   </div>
   <div class="row filters-menu__wrapper">
     <div class="col-6 col-md-2 d-md-hidden filters-menu">
-      <span class="btn secondary"
-      >{% trans 'Filters' context 'Filter heading title' %}</span>
+      <span class="btn secondary">
+        {% trans 'Filters' context 'Filter heading title' %}
+      </span>
     </div>
     <div class="col-6 col-md-10">
       <div class="sort-by">
