--- a/templates/dashboard/page/list.html
+++ b/templates/dashboard/page/list.html
@@ -24,7 +24,7 @@
 
 {% block breadcrumbs %}
   <ul class="breadcrumbs">
-    <li>{% trans "Pages" %}</li>
+    <li class="visible-s">{% trans "Pages" %}</li>
   </ul>
 {% endblock %}
 
