Fix react styles and animations

--- a/saleor/static/scss/components/_filters.scss
+++ b/saleor/static/scss/components/_filters.scss
@@ -64,6 +64,7 @@
     margin-bottom: 0;
     li {
       padding-left: $global-padding;
+      padding-top: $global-padding * .25;
       input {
         margin-right: $global-margin;
       }
