Feature to allow easier tracking of manufacturers and manufacturers SKU
As a following from the discussion at: https://github.com/mirumee/saleor/pull/1996#issuecomment-380020151

Introduces two new fields:
  - Product.vendor: sets the vendor/ manufacturer name (as foreign key);
  - ProductVariant.vendor_sku: sets the SKU of the vendor or manufacturer.

----

It's currently a WIP.

Remaining to do:
- [ ] Write tests;
- [ ] (dashboard) Show values in product details and in orders;
- [ ] Move URL logic to models as cached properties (if that's okay to Saleor's team) to avoid wasting CPU cycles and making the code complicated (e.g.: generating URLs from the view and passing them to the context).

--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -209,6 +209,13 @@
                     </li>
                   {% endif %}
                   {% if perms.product.view_properties %}
+                    <li class="{% block menu_vendors_class %}{% endblock %}">
+                      <a href="{% url 'dashboard:product-vendors' %}">
+                        {% trans "Vendors" context "Dashboard vendors list" %}
+                      </a>
+                    </li>
+                  {% endif %}
+                  {% if perms.product.view_properties %}
                     <li class="{% block menu_attributes_class %}{% endblock %}">
                       <a href="{% url 'dashboard:product-attributes' %}">
                         {% trans "Attributes" context "Dashboard attributes list" %}
