--- a/templates/dashboard/product/product_variant/form.html
+++ b/templates/dashboard/product/product_variant/form.html
@@ -87,6 +87,9 @@
                   {{ form.sku|materializecss }}
                 </div>
                 <div class="row">
+                  {{ form.vendor_sku|materializecss }}
+                </div>
+                <div class="row">
                   {{ form.quantity|materializecss }}
                 </div>
                 <div class="row">
