Add privacy policy page

--- a/templates/base.html
+++ b/templates/base.html
@@ -235,10 +235,11 @@
                 </a>
               </li>
             {% endif %}
-            {% if about_page %}
-              {% comment %} DEMO - include link to example page if exists {% endcomment %}
-              <li><a href="{% url "page:details" "about" %}">About</a></li>
-            {% endif %}
+            <li>
+              <a href="{% url 'privacy-policy' %}">
+                {% trans "Privacy policy" context "Main navigation item" %}
+              </a>
+            </li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-12">
