--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Privacy policy{% endblock %}
+{% block title %}Privacy policy — {{ block.super }}{% endblock %}
 
 {% block meta_tags %}
   <meta property="og:title" content="Privacy policy">
