--- a/templates/userprofile/snippets/address-short.html
+++ b/templates/userprofile/snippets/address-short.html
@@ -1,13 +1,12 @@
- {% load demo_obfuscators %}
-<div class="address-details" data-content="{% if address.company_name %}{{ address.company_name }}<br>{% endif %}
-                 {{ address.street_address_1|obfuscate_string }}<br>
-                 {{ address.postal_code|obfuscate_string }} {{ address.city|obfuscate_string }}<br>
+ <div class="address-details" data-content="{% if address.company_name %}{{ address.company_name }}<br>{% endif %}
+                 {{ address.street_address_1 }}<br>
+                 {{ address.postal_code }} {{ address.city }}<br>
                  {{ address.get_country_display }}<br>
-                 {{ address.phone|obfuscate_phone }}"
+                 {{ address.phone }}"
    data-html="true" title="{{ address.first_name }} {{ address.last_name }}">
     <p>{{ address.first_name }} {{ address.last_name }}{% if address.company_name %}, {{ address.company_name }}{% endif %}<br>
-    {{ address.street_address_1|obfuscate_string }}<br>
-    {{ address.postal_code|obfuscate_string }} {{ address.city|obfuscate_string }}
+    {{ address.street_address_1 }}<br>
+    {{ address.postal_code }} {{ address.city }}
     {{ address.get_country_display }}<br>
-    {{ address.phone|obfuscate_phone }}</p>
+    {{ address.phone }}</p>
 </div>
