WIP Anonymize users data

--- a/templates/dashboard/customer/detail.html
+++ b/templates/dashboard/customer/detail.html
@@ -183,7 +183,7 @@
               {% endif %}
               <svg data-src="{% static "dashboard/images/email.svg" %}" width="14" height="14" />
               <a href="#">
-                {{ customer.email|obfuscate_email }}
+                {{ customer.email }}
               </a>
             </div>
           </div>
