--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -32,7 +32,7 @@
   <h2>Analytics</h2>
   <p>This website includes Google Analytics software that collects anonymized information about visitors to help us provide better services. <a href="https://www.google.com/policies/privacy/partners/">See how Google uses your data.</a></p>
   <h2>Personal data</h2>
-  <p>This website allows address data consisting of given and family names, email addresses, family names, shipping and billing addresses to be entered for the purpose of testing the checkout process.
+  <p>This website allows address data consisting of given and family names, email addresses, shipping and billing addresses to be entered for the purpose of testing the checkout process.
   <p>In case the data concerning a real person is entered it may be processed for the purpose of completing the checkout process and will be anonymized to avoid leaking it to other visitors accessing the dashboard part of the website.</p>
   <p>All data is wiped within 60 days of being entered or whenever a new version of the Saleor Demo is released.</p>
   <h2>Your rights</h2>
