--- a/themes/saleor/styles/app.scss
+++ b/themes/saleor/styles/app.scss
@@ -22,6 +22,7 @@
 @import "_partial/footer";
 @import "_partial/header";
 @import "_partial/mobile";
+@import "_partial/privacy/_content";
 @import "_partial/roadmap/_content";
 @import "_partial/roadmap/_timeline";
 @import "_partial/roadmap/_top";
