Dropped vendor_sku for barcode (GTIN/EAN)

--- a/templates/dashboard/product/form.html
+++ b/templates/dashboard/product/form.html
@@ -98,7 +98,7 @@
                     {{ variant_form.sku|materializecss }}
                   </div>
                   <div class="row">
-                    {{ variant_form.vendor_sku|materializecss:"input-field s12" }}
+                    {{ variant_form.barcode|materializecss:"input-field s12" }}
                   </div>
                   <div class="row">
                     {{ variant_form.quantity|materializecss }}
