--- a/templates/dashboard/product/product_variant/form.html
+++ b/templates/dashboard/product/product_variant/form.html
@@ -87,7 +87,7 @@
                   {{ form.sku|materializecss }}
                 </div>
                 <div class="row">
-                  {{ form.vendor_sku|materializecss }}
+                  {{ form.barcode|materializecss }}
                 </div>
                 <div class="row">
                   {{ form.quantity|materializecss }}
