--- a/templates/checkout/summary.html
+++ b/templates/checkout/summary.html
@@ -7,8 +7,13 @@
     {% csrf_token %}
     <h2>{% trans "Billing address" context "Checkout summary title" %}</h2>
     {% include "checkout/snippets/addresses_form.html" with addresses_form=addresses_form addresses=additional_addresses address_form=address_form only %}
-    <h2>{% trans "Add a note to your order" context "Checkout summary note title" %}</h2>
-        {% bootstrap_form note_form show_label=False %}
+
+    {% include "checkout/snippets/add_note_form.html" %}
+
+    <hr/>
+
+    {% include "checkout/snippets/selling_contract_form.html" %}
+
     <p class="text-md-right">
       <button type="submit" class="btn primary">
         {% trans "Order &amp Pay" context "Checkout summary primary action" %}
