--- a/templates/dashboard/company/modal/confirm_delete.html
+++ b/templates/dashboard/company/modal/confirm_delete.html
@@ -5,21 +5,21 @@
 {% block form_class %}form-async{% endblock %}
 
 {% block action_url %}
-{% url 'dashboard:customer-delete' pk=customer.pk %}
+{% url 'dashboard:company-delete' pk=company.pk %}
 {% endblock %}
 
 {% block title %}
-{% blocktrans trimmed context "Header of modal used for removing customer's account " %}
-  Remove customer {{ customer }}
+{% blocktrans trimmed context "Header of modal used for removing company" %}
+  Remove company {{ company }}
 {% endblocktrans %}
 {% endblock %}
 
 {% block content %}
   <div class="col s12">
     {% blocktrans trimmed context "Modal remove collection text" %}
-      Are you sure you want to remove customer <strong>{{ customer }}</strong>?
-      Please note that this procedure will remove customer's account,
-      but customer's orders and addresses associated with them will persist for the financial records.
+      Are you sure you want to remove company <strong>{{ company }}</strong>?
+      Please note that this procedure will remove the company, but
+      will leave all associated customers and their orders.
     {% endblocktrans %}
   </div>
 {% endblock content %}
