--- a/templates/dashboard/company/modal/confirm_delete.html
+++ b/templates/dashboard/company/modal/confirm_delete.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block form_class %}form-async{% endblock %}
+{% block form_class %}{% endblock %}
 
 {% block action_url %}
 {% url 'dashboard:company-delete' pk=company.pk %}
