--- a/templates/dashboard/order/detail.html
+++ b/templates/dashboard/order/detail.html
@@ -204,6 +204,9 @@
                 {% if order.user.note %}
                   <p>{{ order.user.note|truncatechars:80 }}</p>
                 {% endif %}
+                {% if order.user.company %}
+                (<a href="{% url 'dashboard:company-details' pk=order.user.company.pk %}">{{ order.user.company }}</a>)
+                {% endif %}
               {% elif order.user_email %}
                 {{ order.user_email }}
               {% else %}
