--- a/src/main.css
+++ b/src/main.css
@@ -1,14 +1,8 @@
-:root {
-    --fontSize: 1rem;
-    --mainColor: color-mod(yellow blend(red 50%));
-    --secondaryColor: lab(32.5 38.5 -47.6 / 90%);
-}
-
 body, html {
     width: 100%;
     height: 100%;
-    background-color: #111010;
-  background-image: repeating-linear-gradient(
+    background-color: var(--background-color);
+    background-image: repeating-linear-gradient(
       -45deg,
       rgba(15, 8, 46, .5), rgba(15, 8, 46, .5) 10%,
       rgba(16, 9, 57, .5) 10%, rgba(16, 9, 57, .5) 20%,
@@ -20,10 +14,14 @@ body, html {
       rgba(26, 15, 81, .5) 70%, rgba(26, 15, 81, .5) 80%,
       rgba(33, 18, 94, .5) 80%, rgba(33, 18, 94, .5) 90%,
       rgba(15, 8, 46, .5) 90%, rgba(15, 8, 46, .5) 100%
-  );
-    transition: 1s;
+    );
+    font-family: var(--font-family-base);
+    color: var(--body-color);
+}
 
-    @nest #root & {
-        background: black;
+.home {
+    & .layout {
+        max-width: var(--layout-width);
+        margin: 0 auto;
     }
 }
